syntax = "proto3";

option java_package = "com.example.datastore";
option java_multiple_files = true;

message SettingsProto {
  int32 card_background_color = 1;
  int32 text_color = 2;
  int32 background_color = 3;
}